--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My git practical</title>
+    <title>My newknj</title>
   </head>
   <body>
     <h1>My git practical</h1>
+    <p>sndjqdsj fklnwen qwkfbhq</p>
   </body>
 </html>
